--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -58,7 +58,7 @@
           <li class="text-right">
             <a
               href="{{ entry.url }}"
-              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white
+              class="navLinksClass font-bold inline-block hover:font-bold hover:text-underline py-2 px-4 text-gray-600 lg:text-white 
               {{'inline-block py-2 px-4 font-bold cursor-default'
               if entry.url == page.url
               else 'underline hover:scale-110'}}">
@@ -68,7 +68,7 @@
         {% endfor %}
       </ul>
 
-      <button id="navAction" class="float-right mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+      <button id="navAction" class="gradient float-right mx-auto lg:mx-0 hover:underline font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out text-white">
         Buy now
       </button>
     </div>
