--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -20,7 +20,7 @@
 
   </head>
 
-  <body class="leading-normal tracking-normal text-white h-14 bg-gradient-to-r to-cyan-500 from-launchlead-blue" style="font-family: 'Source Sans Pro', sans-serif;">
+  <body class="leading-normal tracking-normal text-white text-opacity-80 h-14 bg-gradient-to-r to-launchlead-gradient-to from-launchlead-gradient-from" style="font-family: 'Source Sans Pro', sans-serif;">
     {% include "../components/navigation.njk" %}
       <main class="">
         {{ content | safe }}
@@ -75,7 +75,6 @@
           navlogoWhite.classList.add("block");
           navlogoBlue.classList.add("hidden");
           header.classList.remove("bg-white");
-          navaction.classList.remove("gradient");
           navaction.classList.add("bg-white");
           navaction.classList.remove("text-white");
           navaction.classList.add("text-gray-600");
