--- a/src/index.njk
+++ b/src/index.njk
@@ -14,8 +14,8 @@ permalink: /
     <!--Left Col-->
     <div class="lg:px-8 lg:pl-14 flex flex-col w-full lg:w-2/4 justify-center items-start text-center lg:text-left">
       {# <p class="uppercase tracking-loose w-full">Unleash the fun</p> #}
-      <h1 class="w-full my-4 text-4xl font-bold leading-tight text-center lg:text-left">
-        A dog lead &amp; ball thrower in one!
+      <h1 class="w-full my-4 text-4xl font-bold leading-tight text-center lg:text-left text-white text-opacity-100">
+        A Dog Lead &amp; Ball Thrower In One!
       </h1>
 
       <ul class="w-full leading-normal text-lg mb-8 text-center lg:text-left lg:list-disc lg:pr-8 lg:pl-14">
@@ -32,7 +32,7 @@ permalink: /
         The Launchlead is a dog lead that can throw a tennis ball up to 50 meters, reduce shoulder stress and let you play more with your furry friend.
       </p>
 
-    <a href="#test" class="mx-auto lg:mx-0 hover:underline text-white font-bold rounded-full mb-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out gradient" href="#test">
+    <a href="#test" class="mx-auto lg:mx-0 hover:underline text-white text-opacity-90 font-bold rounded-full mb-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out gradient" href="#test">
         See it in action
       </a>
   </div>
@@ -76,8 +76,6 @@ permalink: /
         <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
           See it in action
         </h3>
-        <h2 id="test" class="scroll-mt-20">Syntax</h2>
-
         <p class="text-gray-600">
           Our patent pending design allows for the ball to be thrown up to 50 meters. It also reduces stress on the shoulders when throwing.
         </p>
@@ -100,7 +98,6 @@ permalink: /
           <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3 text-center lg:text-left">
               Carry less, play more
           </h3>
-          <p>About this item<p>
           <ul class=" text-gray-800 mb-8 md:ml-8 text-center md:text-left lg:list-disc">
             <li class="mb-3">
               <strong>Throw away your thrower </strong> - Using a LaunchLead means no need to take an additional ball thrower, recycle it and use a lead that can throw as well. Thats one less thing to carry.</li>
@@ -148,7 +145,7 @@ permalink: /
 
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-start">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white text-opacity-90 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Action
           </button>
             </div>
@@ -174,7 +171,7 @@ permalink: /
 
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white text-opacity-90 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Action
           </button>
             </div>
@@ -199,7 +196,7 @@ permalink: /
 
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-end">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline gradient text-white text-opacity-90 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Action
           </button>
             </div>
@@ -234,7 +231,7 @@ permalink: /
                 <span class="text-base">for one user</span>
           </div>
           <div class="flex items-center justify-center">
-            <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+            <button class="mx-auto lg:mx-0 hover:underline gradient text-white text-opacity-90 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                   Sign Up
                 </button>
           </div>
@@ -257,7 +254,7 @@ permalink: /
                 <span class="text-base">/ per user</span>
           </div>
           <div class="flex items-center justify-center">
-            <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+            <button class="mx-auto lg:mx-0 hover:underline gradient text-white text-opacity-90 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                   Sign Up
                 </button>
           </div>
@@ -280,7 +277,7 @@ permalink: /
                 <span class="text-base">/ per user</span>
           </div>
           <div class="flex items-center justify-center">
-            <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+            <button class="mx-auto lg:mx-0 hover:underline gradient text-white text-opacity-90 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                   Sign Up
                 </button>
           </div>
