--- a/src/pages/unleash.njk
+++ b/src/pages/unleash.njk
@@ -55,13 +55,13 @@ eleventyNavigation:
         </div>
       </div> #}
 
-      <h2 class="w-full mt-12 mb-2 text-4xl font-bold leading-tight text-center text-gray-800">
+      {# <h2 class="w-full mt-12 mb-2 text-4xl font-bold leading-tight text-center text-gray-800">
         Step by step tutorial
       </h2>
 
       <div class="w-full mb-8 mt-4">
         <div class="h-1 mx-auto gradient w-64 my-0 py-0 rounded-t"></div>
-      </div>
+      </div> #}
 
       {# text right #}
       <div class="flex flex-wrap flex-col-reverse sm:flex-row">
